[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/DialogueBox.gd" id="1"]

[node name="DialogueBox" type="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PortraitContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextContent" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="SpeakerLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/TextContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker"

[node name="TextLabel" type="RichTextLabel" parent="Panel/MarginContainer/HBoxContainer/TextContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
text = "Dialogue text goes here."
fit_content = true

[node name="ContinueIndicator" type="Label" parent="Panel/MarginContainer/HBoxContainer/TextContent"]
layout_mode = 2
horizontal_alignment = 2
theme_override_font_sizes/font_size = 12
text = "Press SPACE to continue..."
